# backend/config/api_router.py
@@ -6,6 +6,7 @@ from rest_framework.routers import SimpleRouter
 from apps.users.api.views import EmailTokenObtainPairView
 from apps.users.api.views import EmailTokenRefreshView
 from apps.users.api.views import OTPVerificationView
+from apps.users.api.views import ResendOTPView
 from apps.users.api.views import UserRegistrationView
 from apps.users.api.views import UserViewSet
 
@@ -19,6 +20,7 @@ urlpatterns = [
     *router.urls,
     path("auth/register/", UserRegistrationView.as_view(), name="auth-register"),
     path("auth/verify-otp/", OTPVerificationView.as_view(), name="auth-verify-otp"),
+    path("auth/resend-otp/", ResendOTPView.as_view(), name="auth-resend-otp"),
     path("auth/token/", EmailTokenObtainPairView.as_view(), name="auth-token"),
     path(
         "auth/token/refresh/",
